tests/errors/scope/test.c


int a = 5;
{
    int a = 6;
    printf(a);
}
